--- a/src/views/components/bank-account-popup.ejs
+++ b/src/views/components/bank-account-popup.ejs
@@ -1,6 +1,6 @@
 <div class="modal">
     <div class="account-container">
-        <form class="account" action="/account/card/addBank" method="POST">
+        <form class="account">
             <div class="account__card">
                 <h1>Thêm tài khoản ngân hàng</h1>
                 <div class="form--items">
