Update fe from TN

--- a/src/views/pages/site/index.ejs
+++ b/src/views/pages/site/index.ejs
@@ -39,7 +39,7 @@
                             <p class="voucher__item__description">Tìm kiếm nơi dừng chân cho
                                 phép bạn có thể ở lại thời gian nhiều nhất</p>
                             <button class="btn--filled sec" type="button">
-                                <div class="status-layer">
+                                <div class="status-layer find-out-now">
                                     <span>Tìm hiểu ngay</span>
                                 </div>
                             </button>
@@ -50,7 +50,7 @@
                             <p class="voucher__item__description">Tìm kiếm nơi dừng chân phù
                                 hợp với túi tiền của bạn nhất có thể</p>
                             <button class="btn--filled sec" type="button">
-                                <div class="status-layer">
+                                <div class="status-layer find-out-now">
                                     <span>Tìm hiểu ngay</span>
                                 </div>
                             </button>
@@ -126,6 +126,7 @@
     <script src="/scripts/header-full.js"></script>
     <script src="/scripts/search-bar.js"></script>
     <script src="/scripts/base.js"></script>
+    <script src="/scripts/index.js"></script>
 
 </body>
 
