Update cancellation on top btn, success popup, otp popup

--- a/src/views/pages/booking/cancellation.ejs
+++ b/src/views/pages/booking/cancellation.ejs
@@ -13,8 +13,8 @@
 
 <body>
     <%- include('../../partials/header-small') %>
-        <%- include('../../components/on-top-btn.ejs') %>
-           
+        
+        <%- include('../../partials/nav-tree', { nav_tree__data }) %>
     
     <main class="content-container">
         <section class="main-content">
