--- a/src/public/styles/components/otp.css
+++ b/src/public/styles/components/otp.css
@@ -1,3 +1,5 @@
+@import url("/styles/base.css");
+
 .modal-otp {
 	position: fixed;
 	display: none;
@@ -94,10 +96,6 @@ h1 {
 	position: absolute;
 	top: 16px;
 	right: 19px;
-}
-
-.otp__close-btn:hover {
-	cursor: pointer;
 }
 
 .otp__close-btn span {
