--- a/src/views/components/comment.ejs
+++ b/src/views/components/comment.ejs
@@ -1,13 +1,17 @@
 <div class="comment-wrapper">
     <div class="comment-wrapper__profile">
         <img src="/imgs/milo.jpg" alt="avatar" />
-        <p><%= accoRoomRating[0].au_user_name %></p>
+        <p>An An</p>
     </div>
     <p class="comment-wrapper__comment">
-        <%- accoRoomRating[0].rating_context %>
+        Dịch vụ rất tốt, chăm sóc chu đáo phục vụ tận tình. Dịch vụ rất tốt, chăm
+        sóc chu đáo phục vụ tận tình. Dịch vụ rất tốt, chăm sóc chu đáo phục vụ tận
+        tình. Dịch vụ rất tốt, chăm sóc chu đáo phục vụ tận tình. Dịch vụ rất tốt,
+        chăm sóc chu đáo phục vụ tận tình. Dịch vụ rất tốt, chăm sóc chu đáo phục vụ
+        tận tình. Dịch vụ rất tốt, chăm sóc chu đáo phục vụ tận tình.
     </p>
     <div class="comment-wrapper__point-day">
-        <p class="comment-wrapper__point"><%= accoRoomRating[0].rating_point %>/5</p>
-        <p><%= accoRoomRating[0].rating_datetime %></p>
+        <p class="comment-wrapper__point">7/10</p>
+        <p>14/10/2023</p>
     </div>
 </div>
