--- a/src/views/partials/header-small.ejs
+++ b/src/views/partials/header-small.ejs
@@ -6,14 +6,12 @@
             <button href="#" class="status-layer noti-btn-hs">Thông báo</button>
         </div>
         <div class="header-container__top-authenticator">
-            <% if(status === 'success'){ %>
             <p>Chào,</p>
             <span class="name-btn-hs">data</span>
             <img src="/imgs/milo.jpg" alt="avatar" class="avatar-btn-hs" />
-            <% } else{ %>
-            <button type="button" class="button-signin signin-btn-hs">Đăng nhập</button>
-            <button type="button" class="button-signup signup-btn-hs">Đăng ký</button>
-            <% } %>
+            <!-- <button type="button" class="button-signin signin-btn-hs">Đăng nhập</button>
+        <button type="button" class="button-signup signup-btn-hs">Đăng ký</button> -->
+
         </div>
     </div>
 </header>
