--- a/src/public/styles/components/credit-account-popup.css
+++ b/src/public/styles/components/credit-account-popup.css
@@ -1,3 +1,5 @@
+@import url("/styles/base.css");
+
 .modal2 {
     position: fixed;
     display: none;
@@ -56,8 +58,6 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-
-
 }
 
 .credit__secure {
