--- a/src/public/styles/pages/account/history.css
+++ b/src/public/styles/pages/account/history.css
@@ -5,6 +5,7 @@
 @import url("/styles/components/review-popup.css");
 @import url("/styles/components/next-page.css");
 @import url("/styles/components/success-popup.css");
+@import url("/styles/partials/nav-tree.css");
 
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -14,16 +15,12 @@ html {
 
 body {
     width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .booking-history-container {
-    margin-top: 12px;
-    margin-bottom: 12px;
-    /* width: 80%; */
-    width: 1152px;
+    margin: 0 auto;
+    width: 80%;
+    max-width: 1152px;
     display: flex;
     gap: 12px;
 }
@@ -34,9 +31,9 @@ body {
     width: 25%;
     padding: 12px;
     border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    border: 1px solid var(--outline-variant);
     background: var(--white);
-    height: 450px;
+    align-self: flex-start;
 }
 
 .aside-content__profile {
@@ -61,7 +58,8 @@ body {
     cursor: pointer;
 }
 
-.aside-content__section p:hover {
+.aside-content__section p:hover,
+.logout-btn:hover {
     border-radius: 8px;
     background-color: var(--gray);
     transition: 0.3s;
@@ -83,7 +81,8 @@ body {
 .aside-content__item p {
     color: var(--red);
     font-weight: 500;
-    padding-left: 12px;
+    margin: 12px;
+    cursor: pointer;
 }
 
 .booking-history {
@@ -105,90 +104,4 @@ body {
 .changePasswordBtn,
 .logoutBtn {
     cursor: pointer;
-}
-
-/*popup*/
-.popup {
-    display: none;
-    position: fixed;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 9999;
-}
-
-.popup__main {
-    position: relative;
-    background-color: #FAFAFA;
-    border-radius: 8px;
-    margin: auto;
-    width: 45%;
-    height: 350px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 24px;
-
-}
-
-.close-btn {
-    position: relative;
-    color: var(--primary-color-1);
-    font-size: 25px;
-    font-weight: 700;
-}
-
-.close-btn:hover {
-    color: rgba(0, 0, 0, 0.5);
-    cursor: pointer;
-}
-
-.popup__img {
-    object-fit: contain;
-    height: 50%;
-    border-radius: 8px;
-}
-
-.popup__content-main {
-    display: flex;
-    padding: 32px;
-    flex-direction: column;
-    gap: 12px;
-}
-
-.popup--top {
-    display: inline-flex;
-    justify-content: space-between;
-}
-
-.popup .popup__title {
-    font-size: 1.5rem;
-    font-weight: 600;
-}
-
-.popup p {
-    margin-bottom: 6px;
-}
-
-.popup__content-title {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-button.btn--filled.pri {
-    height: 48px;
-    width: 150px;
-    margin-left: 4px;
-}
-
-button.btn--outlined.pri {
-    height: 48px;
-    width: 150px;
-    margin-right: 4px;
 }
