--- a/src/public/styles/pages/account/information.css
+++ b/src/public/styles/pages/account/information.css
@@ -2,6 +2,7 @@
 @import url("/styles/partials/header-medium.css");
 @import url("/styles/partials/footer.css");
 @import url("/styles/components/success-popup.css");
+@import url("/styles/partials/nav-tree.css");
 
 html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -11,25 +12,15 @@ html {
 
 body {
     width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .account-container {
-    margin-top: 12px;
-    margin-bottom: 12px;
-    /* width: 80%; */
-    width: 1152px;
+    width: 80%;
+    max-width: 1152px;
     display: flex;
+    flex-direction: row;
+    margin: 12px auto;
     gap: 12px;
-}
-
-hr {
-    background-color: var(--outline-variant);
-    border-width: 1px;
-    width: 98%;
-    margin: 14px;
 }
 
 .aside-content {
@@ -38,9 +29,9 @@ hr {
     width: 25%;
     padding: 12px;
     border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    border: 1px solid var(--outline-variant);
     background: var(--white);
-    height: 450px;
+    align-self: flex-start;
 }
 
 .aside-content__profile {
@@ -65,7 +56,8 @@ hr {
     cursor: pointer;
 }
 
-.aside-section p:hover {
+.aside-section p:hover,
+.logout-btn:hover {
     border-radius: 8px;
     background-color: var(--gray);
     transition: 0.3s;
@@ -76,20 +68,18 @@ hr {
     background-color: var(--primary-color-1);
     color: var(--white);
     border-radius: 8px;
-    padding: 12px;
 }
 
 .aside-content__img {
     height: 64px;
     width: 64px;
     border-radius: 100%;
-    object-fit: cover;
 }
 
 .aside-item p {
     color: var(--red);
     font-weight: 500;
-    padding-left: 12px;
+    margin: 12px;
 }
 
 .form {
@@ -168,90 +158,4 @@ hr {
 .change-password-btn,
 .logout-btn {
     cursor: pointer;
-}
-
-/*popup*/
-.popup {
-    display: none;
-    position: fixed;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 9999;
-}
-
-.popup__main {
-    position: relative;
-    background-color: #FAFAFA;
-    border-radius: 8px;
-    margin: auto;
-    width: 45%;
-    height: 350px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 24px;
-
-}
-
-.close-btn {
-    position: relative;
-    color: var(--primary-color-1);
-    font-size: 25px;
-    font-weight: 700;
-}
-
-.close-btn:hover {
-    color: rgba(0, 0, 0, 0.5);
-    cursor: pointer;
-}
-
-.popup__img {
-    object-fit: contain;
-    height: 50%;
-    border-radius: 8px;
-}
-
-.popup__content-main {
-    display: flex;
-    padding: 32px;
-    flex-direction: column;
-    gap: 12px;
-}
-
-.popup--top {
-    display: inline-flex;
-    justify-content: space-between;
-}
-
-.popup .popup__title {
-    font-size: 1.5rem;
-    font-weight: 600;
-}
-
-.popup p {
-    margin-bottom: 6px;
-}
-
-.popup__content-title {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-button.btn--filled.pri {
-    height: 48px;
-    width: 150px;
-    margin-left: 4px;
-}
-
-button.btn--outlined.pri {
-    height: 48px;
-    width: 150px;
-    margin-right: 4px;
 }
