--- a/src/public/styles/partials/header-small.css
+++ b/src/public/styles/partials/header-small.css
@@ -1,3 +1,5 @@
+@import url("/styles/base.css");
+
 header {
     background-color: var(--primary-color-1);
     height: 112px;
@@ -11,6 +13,7 @@ header {
 
 .header-container {
     width: 80%;
+    max-width: 1152px;
     margin: 0 auto;
     display: flex;
     align-items: center;
