--- a/src/views/components/search-bar.ejs
+++ b/src/views/components/search-bar.ejs
@@ -18,7 +18,7 @@
     <button class="button--submit">Tìm kiếm</button>
 </div>
 <!-- Số lượng người lớn, trẻ em, phòng-->
-<div class="search-quality">
+<div class="search-quality" id="tongleButton">
     <div class="search-quality__adults">
         <span>Người lớn</span>
         <div class="counter--wraper">
