--- a/src/views/pages/account/change-password.ejs
+++ b/src/views/pages/account/change-password.ejs
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-    <link rel="stylesheet" href="/styles/pages/account/change-password.css" />
     <title>2WAYS.com</title>
+    <link rel="stylesheet" href="/styles/pages/account/change-password.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
 </head>
 
 <body>
     <%- include('../../partials/header-medium.ejs') %>
+    <%- include('../../partials/nav-tree') %>
+
 
     <div class="change-password-container">
         <aside class="aside-content">
@@ -38,26 +40,6 @@
 
             <div class="aside-content__item logout-btn">
                 <p>Đăng xuất</p>
-            </div>
-            <div class="popup">
-                <div class="popup__main">
-                    <div class="popup__content-title">
-                        <div class="popup--top">
-                            <p class="popup__title">Đăng xuất</p>
-                            <div class="close-btn">
-                                <span class="material-symbols-outlined">cancel</span>
-                            </div>
-                        </div>
-                    </div>
-                    <img src="/imgs/logout.png" alt="logout" class="popup__img">
-                    <div class="popup__content">
-                        <p>Bạn có chắc chắn muốn đăng xuất không?</p>
-                    </div>
-                    <div class="popup__button">
-                        <button class="btn--outlined pri btn-cancel" type="submit">Hủy</button>
-                        <button class="btn--filled pri btn-logout" type="submit">Đăng xuất</button>
-                    </div>
-                </div>
             </div>
         </aside>
 
@@ -113,9 +95,11 @@
     <%- include('../../partials/footer.ejs') %>
     <%- include('../../components/success-popup.ejs') %>
 
+
     <script src="/scripts/change-password.js"></script>
     <script src="/scripts/search-bar.js"></script>
     <script src="/scripts/header-medium.js"></script>
+
 
 </body>
 
