--- a/src/views/pages/account/information.ejs
+++ b/src/views/pages/account/information.ejs
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <link rel="stylesheet" href="/styles/pages/account/information.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <title>2WAYS.com</title>
 </head>
 
 <body>
     <%- include('../../partials/header-medium') %>
+    <%- include('../../partials/nav-tree') %>
+
 
     <div class="account-container">
         <aside class="aside-content">
             <div class="aside-content__profile">
-                <img class="aside-content__img" src="/imgs/<%= data.avatar ? data.avatar : 'details/user_1.jpg' %>" alt="" />
+                <img class="aside-content__img" src="/imgs/milo.jpg" alt="" />
                 <div class="aside-content__detail">
                     <p class="aside-content__detail-bold">Giàu Phan</p>
                     <p style="font-size: 12px"><i>Chỉnh sửa avatar</i></p>
@@ -38,28 +40,7 @@
             <div class="aside-item logout-btn">
                 <p>Đăng xuất</p>
             </div>
-            <div class="popup">
-                <div class="popup__main">
-                    <div class="popup__content-title">
-                        <div class="popup--top">
-                            <p class="popup__title">Đăng xuất</p>
-                            <div class="close-btn">
-                                <span class="material-symbols-outlined">cancel</span>
-                            </div>
-                        </div>
-                    </div>
-                    <img src="/imgs/logout.png" alt="logout" class="popup__img">
-                    <div class="popup__content">
-                        <p>Bạn có chắc chắn muốn đăng xuất không?</p>
-                    </div>
-                    <div class="popup__button">
-                        <button class="btn--outlined pri btn-cancel" type="submit">Hủy</button>
-                        <button class="btn--filled pri btn-logout" type="submit">Đăng xuất</button>
-                    </div>
-                </div>
-            </div>
         </aside>
-
         <!-- Xem hồ sơ -->
         <section id="view-profile" class="form">
             <div class="form__title">
@@ -71,24 +52,27 @@
 
             <div class="form__items">
                 <div class="form__item">
-                    <h1>Họ và tên:</h1>
-                    <input class="form-control" type="text" placeholder="<%= data.first_name %> <%= data.last_name %>" disabled />
-                    <p><%- data.first_name %></p>
+                    <h1>Họ:</h1>
+                    <input class="form-control" type="text" placeholder="Phan" disabled />
+
+                    <h1>Tên:</h1>
+                    <input class="form-control" type="text" placeholder="Giàu" disabled />
                 </div>
+
 
                 <div class="form__item">
                     <h1>Địa chỉ Email:</h1>
-                    <input class="form-control" type="text" placeholder="<%= data.email %>" disabled />
+                    <input class="form-control" type="text" placeholder="21520796@gm.uit.edu.vn" disabled />
                 </div>
 
                 <div class="form__item">
                     <h1>Ngày sinh:</h1>
-                    <input class="form-control unfilled" type="none" placeholder="<%= data.birthday ? data.birthday : 'Thêm ngày sinh' %>" disabled />
+                    <input class="form-control unfilled" type="none" placeholder="Thêm ngày sinh" disabled />
                 </div>
 
                 <div class="form__item">
                     <h1>Giới tính:</h1>
-                    <input class="form-control unfilled" type="none" placeholder="<%= data.sex ? data.sex : 'Thêm giới tính' %>" disabled />
+                    <input class="form-control unfilled" type="none" placeholder="Thêm giới tính" disabled />
                 </div>
 
                 <!-- <div class="form__item">
@@ -104,7 +88,6 @@
                 <button class="form--submit2 form--submit2-default ">Sửa</button>
             </div>
         </section>
-
         <!-- Sửa hồ sơ -->
         <section id="edit-profile" class="form">
             <div class="form__title">
@@ -116,13 +99,16 @@
 
             <div class="form__items">
                 <div class="form__item">
-                    <h1>Họ và tên:</h1>
-                    <input class="form-control" type="text" placeholder="<%= data.first_name %> <%= data.last_name %>" />
+                    <h1>Họ:</h1>
+                    <input class="form-control" type="text" placeholder="Phan" />
+
+                    <h1>Tên:</h1>
+                    <input class="form-control" type="text" placeholder="Giàu" />
                 </div>
 
                 <div class="form__item">
                     <h1>Địa chỉ Email:</h1>
-                    <input class="form-control" type="text" placeholder="<%= data.email %>" />
+                    <input class="form-control" type="text" placeholder="21520796@gm.uit.edu.vn" />
                 </div>
 
                 <div class="form__item">
@@ -134,9 +120,9 @@
                     <h1>Giới tính:</h1>
                     <select class="form-select" aria-label="Default select example">
                         <option selected>Thêm giới tính</option>
-                        <option value="Male">Nam</option>
-                        <option value="Female">Nữ</option>
-                        <option value="Other">Khác</option>
+                        <option value="1">Nam</option>
+                        <option value="2">Nữ</option>
+                        <option value="3">Khác</option>
                     </select>
                 </div>
             </div>
@@ -147,13 +133,15 @@
             </div>
         </section>
     </div>
-
     <%- include('../../components/success-popup')  %>
+
     <%- include('../../partials/footer') %>
 
     <script src="/scripts/account-page.js"></script>
     <script src="/scripts/search-bar.js"></script>
     <script src="/scripts/header-medium.js"></script>
+
+
 
 </body>
 
