--- a/src/views/pages/booking/information.ejs
+++ b/src/views/pages/booking/information.ejs
@@ -16,7 +16,7 @@
     <%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: "/" },
         { text: 'Đặt phòng', link: null },
-        { text: 'Thông tin', link: "/booking/info" }
+        { text: 'Thông tin đặt phòng', link: "/booking/information" }
     ] }) %>
     <main>
         <div class="payment--container">
@@ -82,7 +82,7 @@
 
                     <div class="your-choice">
                         <h5>Bạn đã chọn</h5>
-                        <h5><b>1 phòng cho 2 người lớn</b></h5>
+                        <h5><b>Tên khách sạn</b></h5>
                         <a href="#"><b style="color: #0866ff">Đổi lựa chọn của bạn</b></a>
                     </div>
 
@@ -113,9 +113,6 @@
                             <h5>Bạn đã đăng nhập bằng:</h5>
                             <div class="email-logout">
                                 <h5>2152****@gm.uit.edu.vn</h5>
-                                <h5>
-                                    <b style="color: #0866ff">(Không phải bạn? <a href="">Thoát</a>)</b>
-                                </h5>
                             </div>
                         </div>
                     </div>
@@ -225,6 +222,7 @@
 
     <%- include('../../partials/footer') %>
 </body>
+<script src="/scripts/header-small.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
