--- a/src/views/pages/site/about.ejs
+++ b/src/views/pages/site/about.ejs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <%# include('../../partials/header-small') %>
+    <%- include('../../partials/header-small', { status: 'success' }) %>
     <%- include('../../components/on-top-btn') %>
     <%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: "/" },
