--- a/src/views/pages/search/results.ejs
+++ b/src/views/pages/search/results.ejs
@@ -13,7 +13,7 @@
 
 <body>
   <%- include('../../partials/header-medium') %>
-  <%- include('../../partials/nav-tree', { nav_tree__data }) %>
+  <%# include('../../partials/nav-tree', { nav_tree__data }) %>
 
   <main class="content-container">
     <aside class="filter-sidebar">
@@ -54,11 +54,11 @@
         <div class="filter-sidebar__type">
           <p class="filter-sidebar__content">Loại chỗ ở:</p>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="Khách sạn">
+            <input type="checkbox" name="acco_type" class="form-check-input acco_type" value="hotel">
             <label class="form-check-label">Khách sạn</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="Biệt thự">
+            <input type="checkbox" name="acco_type" class="form-check-input acco_type" value="resort">
             <label class="form-check-label">Biệt thự</label>
           </div>
           <div class="form-check">
@@ -74,22 +74,22 @@
         <div class="filter-sidebar__cus-rate">
           <p class="filter-sidebar__content">Đánh giá của khách hàng:</p>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="9+">
+            <input type="checkbox" name="rating_point" class="form-check-input rating_point" value="9+">
             <label class="form-check-label__score">9+</label>
             <label class="form-check-label">Trên cả tuyệt vời</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="8+">
+            <input type="checkbox" name="rating_point" class="form-check-input rating_point" value="8+">
             <label class="form-check-label__score">8+</label>
             <label class="form-check-label">Xuất sắc</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="7+">
+            <input type="checkbox" name="rating_point" class="form-check-input rating_point" value="7+">
             <label class="form-check-label__score">7+</label>
             <label class="form-check-label">Rất tốt</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="6+">
+            <input type="checkbox" name="rating_point" class="form-check-input rating_point" value="6+">
             <label class="form-check-label__score">6+</label>
             <label class="form-check-label">Hài lòng</label>
           </div>
@@ -98,15 +98,15 @@
         <div class="filter-sidebar__bed-type">
           <p class="filter-sidebar__content">Loại giường:</p>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="Giường đơn">
+            <input type="checkbox" name="bed_type" class="form-check-input bed_type" value="Giường đơn">
             <label class="form-check-label">Giường đơn</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="Giường đôi">
+            <input type="checkbox" name="bed_type" class="form-check-input bed_type" value="Giường đôi">
             <label class="form-check-label">Giường đôi</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="Giường tầng">
+            <input type="checkbox" name="bed_type" class="form-check-input bed_type" value="Giường tầng">
             <label class="form-check-label">Giường tầng</label>
           </div>
         </div>
@@ -143,7 +143,7 @@
           <p class="filter-sidebar__content">Đánh giá sao:</p>
           <p class="filter-sidebar__note">Đánh giá này do chỗ nghĩ cung cấp và thường được đánh giá bởi tổ chức đánh giá khách sạn uy tín hoặc một bên thứ ba khác.</p>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="5sao">
+            <input type="checkbox" name="acco_star" class="form-check-input acco_star" value="5sao">
             <label class="form-check-label">
               <span class="material-symbols-outlined">grade</span>
               <span class="material-symbols-outlined">grade</span>
@@ -153,7 +153,7 @@
             </label>
           </div>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="4sao">
+            <input type="checkbox" name="acco_star" class="form-check-input acco_star" value="4sao">
             <label class="form-check-label">
               <span class="material-symbols-outlined">grade</span>
               <span class="material-symbols-outlined">grade</span>
@@ -162,7 +162,7 @@
             </label>
           </div>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="3sao">
+            <input type="checkbox" name="acco_star" class="form-check-input acco_star" value="3sao">
             <label class="form-check-label">
               <span class="material-symbols-outlined">grade</span>
               <span class="material-symbols-outlined">grade</span>
@@ -170,20 +170,20 @@
             </label>
           </div>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="2sao">
+            <input type="checkbox" name="acco_star" class="form-check-input acco_star" value="2sao">
             <label class="form-check-label">
               <span class="material-symbols-outlined">grade</span>
               <span class="material-symbols-outlined">grade</span>
             </label>
           </div>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="1sao">
+            <input type="checkbox" name="acco_star" class="form-check-input acco_star" value="1sao">
             <label class="form-check-label">
               <span class="material-symbols-outlined">grade</span>
             </label>
           </div>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="Chưa có đánh giá">
+            <input type="checkbox" name="acco_star" class="form-check-input acco_star" value="Chưa có đánh giá">
             <label class="form-check-label">Chưa có đánh giá</label>
           </div>
         </div>
@@ -191,11 +191,11 @@
         <div class="filter-sidebar__cancel">
           <p class="filter-sidebar__content">Chính sách hủy phòng:</p>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="Miễn phí hủy">
+            <input type="checkbox" name="acco_fea" class="form-check-input acco_fea" value="1">
             <label class="form-check-label">Miễn phí hủy</label>
           </div>
           <div class="form-check">
-            <input type="checkbox" class="form-check-input" value="Không cần thanh toán trước">
+            <input type="checkbox" name="acco_fea" class="form-check-input acco_fea" value="2">
             <label class="form-check-label">Không cần thanh toán trước</label>
           </div>
         </div>
@@ -274,10 +274,10 @@
             <p class="search-results__filter__content">Giá</p>
             <span class="material-symbols-outlined dropdown-button">keyboard_arrow_down</span>
             <div class="dropdown-content">
-              <input type="radio" id="sort-z-to-a" name="sort" value="z-to-a" />
-              <label for="sort-z-to-a" class="sort-label">Cao đến thấp</label>
-              <input type="radio" id="sort-a-to-z" name="sort" value="a-to-z" />
-              <label for="sort-a-to-z" class="sort-label">Thấp đến cao</label>
+              <input type="radio" id="sort-z-to-a" name="cost" value="Cao đến thấp" />
+              <label for="sort-z-to-a" class="sort-label cost">Cao đến thấp</label>
+              <input type="radio" id="sort-a-to-z" name="cost" value="Thấp đến cao" />
+              <label for="sort-a-to-z" class="sort-label cost">Thấp đến cao</label>
             </div>
           </div>
         </div>
@@ -287,10 +287,10 @@
             <p class="search-results__filter__content">Được đánh giá hàng đầu</p>
             <span class="material-symbols-outlined dropdown-button">expand_more</span>
             <div class="dropdown-content">
-              <input type="radio" id="sort-z-to-a" name="sort" value="z-to-a" />
-              <label for="sort-z-to-a" class="sort-label">Cao đến thấp</label>
-              <input type="radio" id="sort-a-to-z" name="sort" value="a-to-z" />
-              <label for="sort-a-to-z" class="sort-label">Thấp đến cao</label>
+              <input type="radio" id="sort-z-to-a" name="accoStar" value="Cao đến thấp" />
+              <label for="sort-z-to-a" class="sort-label accoStar">Cao đến thấp</label>
+              <input type="radio" id="sort-a-to-z" name="accoStar" value="Thấp đến cao" />
+              <label for="sort-a-to-z" class="sort-label accoStar">Thấp đến cao</label>
             </div>
           </div>
         </div>
@@ -300,10 +300,10 @@
             <p class="search-results__filter__content">Được đánh giá nhiều nhất</p>
             <span class="material-symbols-outlined dropdown-button">expand_more</span>
             <div class="dropdown-content">
-              <input type="radio" id="sort-z-to-a" name="sort" value="z-to-a" />
-              <label for="sort-z-to-a" class="sort-label">Cao đến thấp</label>
-              <input type="radio" id="sort-a-to-z" name="sort" value="a-to-z" />
-              <label for="sort-a-to-z" class="sort-label">Thấp đến cao</label>
+              <input type="radio" id="sort-z-to-a" name="countRating" value="Cao đến thấp" />
+              <label for="sort-z-to-a" class="sort-label countRating">Cao đến thấp</label>
+              <input type="radio" id="sort-a-to-z" name="countRating" value="Thấp đến cao" />
+              <label for="sort-a-to-z" class="sort-label countRating">Thấp đến cao</label>
             </div>
           </div>
         </div>
@@ -313,7 +313,9 @@
         </div>
       </div>
       <hr aria-hidden="true">
-      <%- include('../../components/search-result-sale') %>
+      <% data.forEach(function(result) {%> 
+        <%- include('../../components/search-result-sale', {result}) %>
+      <%})%>
       <%- include('../../components/next-page') %>
       <%- include('../../partials/footer') %>
     </section>
