Update addBank, addDebit, delBank, delDebit backend

--- a/src/views/components/card-fill-default.ejs
+++ b/src/views/components/card-fill-default.ejs
@@ -11,6 +11,6 @@
             <input type="hidden" name="debit_id" value=<%= debit.debit_id %>>
             <button class="line-delete delete-btn delete-debit" type="submit">Xóa</button>
         </form>
-        <button class="filled-default default-btn default-btn-debit">Mặc định</button>
+        <button class="unfilled-default default-btn default-btn-debit">Thiết lập mặc định</button>
     </div>
 </div>
