--- a/src/views/pages/account/history.ejs
+++ b/src/views/pages/account/history.ejs
@@ -14,7 +14,7 @@
 
 <body>
     <%- include('../../partials/header-medium.ejs') %>
-    <%- include('../../partials/nav-tree') %>
+    <%# include('../../partials/nav-tree') %>
 
 
     <main class="booking-history-container">
