--- a/src/views/components/conform-del-bank.ejs
+++ b/src/views/components/conform-del-bank.ejs
@@ -1,9 +1,9 @@
-<div class="modal-otp">
+<div class="modal-otp del-bank-card">
     <div class="otp-container">
         <section class="otp">
             <div class="otp__card">
-                <h1>Xác thực OTP</h1>
-                <p class="otp__notice">Mã OTP đã được gửi đến số điện thoại của bạn!</p>
+                <h1>Xác nhận xóa thẻ</h1>
+                <!-- <p class="otp__notice">Bạn có chắc chắc xóa thẻ</p>
                 <div class="otp__card-input">
                     <input type="text" class="form-control otp__card-text" maxlength="1">
                     <input type="text" class="form-control otp__card-text" maxlength="1">
@@ -14,13 +14,13 @@
                 </div>
                 <p class="otp__reject">Không nhận được OTP?
                     <a class="retry" href="#">Gửi lại OTP</a>
-                </p>
+                </p> -->
                 <div class="otp__button">
-                    <button class="otp__button--submit1">Hủy</button>
+                    <button class="otp__button--submit1 otp__button--submit1--del-bank">Hủy</button>
 
-                    <button class="otp__button--submit2">Tiếp tục</button>
+                    <button class="otp__button--submit2 otp__button--submit2--del-bank">Đồng ý</button>
                 </div>
-                <div class="otp__close-btn">
+                <div class="otp__close-btn otp__close-btn--del-bank">
                     <span class="material-symbols-outlined">cancel</span>
                 </div>
             </div>
