--- a/src/views/pages/account/card.ejs
+++ b/src/views/pages/account/card.ejs
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
     <title>2WAYS.com</title>
     <link rel="stylesheet" href="/styles/pages/account/payment.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
@@ -56,11 +58,18 @@
                         <h1>Thẻ tín dụng/ghi nợ</h1>
                         <button class="debit-credit-card--submit add-credit-account-btn">+ Thêm thẻ mới</button>
                     </div>
-                    <% if (false) { %>
+                    <% if (data.debit_cards.length == 0) { %>
                     <h2>Bạn chưa liên kết thẻ tín dụng/ghi nợ</h2>
                     <% } else { %>
-                    <%-include('../../components/card-fill')%>
+                    <% data.debit_cards.forEach(function (debit,index) { %>
+                    <% if (index==0) { %>
+                    <%-include('../../components/card-fill', {debit})%>
+                    <% } else { %>
+                    <%-include('../../components/card-fill-default', {debit})%>
                     <% } %>
+                    <% }) %>
+                    <% } %>
+
                 </div>
 
                 <div class="form__card-item ">
@@ -68,13 +77,26 @@
                         <h1>Tài khoản ngân hàng của tôi</h1>
                         <button class="bank-account--submit add-bank-account-btn">+ Thêm tài khoản ngân hàng</button>
                     </div>
-                    <h2>Bạn chưa liên kết tài khoản ngân hàng</h2>
+                    <% if (data.bank_cards.length == 0) { %>
+                    <h2>Bạn chưa liên kết thẻ tín dụng/ghi nợ</h2>
+                    <% } else { %>
+                    <% data.bank_cards.forEach(function (bank,index) { %>
+                    <% if (index==0) { %>
+                    <%-include('../../components/bank-fill', {bank})%>
+                    <% } else { %>
+                    <%-include('../../components/bank-fill-default', {bank})%>
+                    <% } %>
+                    <% }) %>
+                    <% } %>
                 </div>
             </div>
 
         </section>
     </div>
-    <%- include('../../components/otp') %>
+    <%- include('../../components/otp-bank') %>
+    <%- include('../../components/otp-debit') %>
+    <%- include('../../components/conform-del-debit') %>
+    <%- include('../../components/conform-del-bank') %>
     <%- include('../../components/success-popup') %>
     <%- include('../../components/bank-account-popup') %>
     <%- include('../../components/credit-account-popup') %>
@@ -86,7 +108,8 @@
     <script src="/scripts/bank-account-popup.js" defer></script>
     <script src="/scripts/credit-account-popup.js"></script>
     <script src="/scripts/search-bar.js"></script>
-    <script src="/scripts/otp.js" defer></script>
+    <script src="/scripts/otp-bank.js" defer></script>
+    <script src="/scripts/otp-debit.js" defer></script>
     <script src="/scripts/header-medium.js"></script>
 </body>
 
