Update input data for header /account/information

--- a/src/views/pages/account/information.ejs
+++ b/src/views/pages/account/information.ejs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <%- include("../../partials/header-medium") %>
+    <%- include("../../partials/header-medium", { user }) %>
     <%- include("../../partials/nav-tree", { nav_tree__data: [
         { text: "Trang chủ", link: "/" },
         { text: "Tài khoản", link: null },
