Add header-small-title in /auth/login

--- a/src/views/pages/auth/login.ejs
+++ b/src/views/pages/auth/login.ejs
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <%- include('../../partials/header-small-title', {
+        title: 'Đăng nhập',
+        help: 'Bạn chưa có tài khoản?'
+    }) %>
 
     <main class="content-container">
         <section class="intro">
