--- a/src/views/partials/header-full.ejs
+++ b/src/views/partials/header-full.ejs
@@ -2,37 +2,33 @@
     <div class="header-container">
         <div class="header-container__top">
             <div class="header-container__logo-img">
-                <img src="/imgs/logo.svg" alt="Logo" class="logo-click-hf" />
+                <img src="/imgs/logo.svg" alt="Logo" class="" />
             </div>
             <div class="header-container__nav-top">
                 <button href="#" class="status-layer " id="homepage-btn-hf">Trang chủ</button>
                 <button href="#" class="status-layer noti-btn-hf">Thông báo</button>
             </div>
             <div class="header-container__top-authenticator">
-                <% if( true ){ %>
+                <% if (user) { %>
                 <p>Chào,</p>
-                <p class="name-click-hf">data</p>
-                <img src="/imgs/milo.jpg" alt="avatar" class="avatar-btn-hf" />
-                <% } else{ %>
-                <button class="button-signin signin-btn-hf" type="button" href="#">
-                    <div class="status-layer">
-                        <span>Đăng nhập</span>
-                    </div>
-                </button>
-
-                <button class="sec button-signup signup-btn-hf" type="button" href="#">
-                    <div class="status-layer">
-                        <span>Đăng ký</span>
-                    </div>
-                </button>
+                <p class="name-click-hf"><%= user?.last_name + ' ' + user?.first_name %></p>
+                <img src="/imgs/user/<%= user?.avatar ?? 'user_1.jpg'%>" alt="avatar" class="avatar-btn-hf" />
+                <% } else { %>
+                <a href="/auth/login" style='text-decoration: none;'>
+                    <button class="button-signin signin-btn-hf" type="button">
+                        <div class="status-layer">
+                            <span>Đăng nhập</span>
+                        </div>
+                    </button>
+                </a>
+                <a href="/auth/register" style='text-decoration: none;'>
+                    <button class="sec button-signup signup-btn-hf" type="button">
+                        <div class="status-layer">
+                            <span>Đăng ký</span>
+                        </div>
+                    </button>
+                </a>
                 <% } %>
-
-                <!-- Header full with login -->
-
-                <!-- <p>Chào,</p>
-          <p class="name-click-hf">data.au_user_first_name data.au_user_last_name </p>
-          <img src="/imgs/milo.jpg" alt="avatar" class="avatar-click-hf"> -->
-
             </div>
         </div>
 
