--- a/src/views/pages/auth/login.ejs
+++ b/src/views/pages/auth/login.ejs
@@ -18,14 +18,10 @@
 
     <main class="content-container">
         <section class="intro">
-            <img src="/imgs/logo-large.png" alt="2WAYS.com" class="intro__logo" />
+            <img src="/imgs/logo--filled.svg" alt="2WAYS.com" class="intro__logo" />
             <div class="intro__content">
-                <p class="intro__slogan">
-                    Cần nơi dừng chân?<br />Đến ngay 2WAYS.com
-                </p>
-                <p class="intro__sub-title">
-                    Tìm phòng với giá ưu đãi nhất từ khách sạn, nhà nghỉ...
-                </p>
+                <p class="intro__slogan">Cần nơi dừng chân?<br />Đến ngay 2WAYS.com</p>
+                <p class="intro__sub-title">Tìm phòng với giá ưu đãi nhất từ khách sạn, nhà nghỉ...</p>
             </div>
         </section>
         <section class="login">
