Format code+Fix footer.ejs

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,26 +1,15 @@
 <footer>
-    <script src="/scripts/footer.js" defer></script>
     <div class="footer-container row">
         <div class="footer-container__contact col-lg-5">
             <h3>2WAYS.com</h3>
             <div class="footer-container__intro">
-                <p>
-                    Việc đặt phòng của bạn là động lực giúp chúng tôi duy trì được công ty.
-                </p>
-                <p>
-                    Bạn có thể liên hệ với chúng tôi thông qua các mạng xã hội
-                </p>
+                <p>Việc đặt phòng của bạn là động lực giúp chúng tôi duy trì được công ty.</p>
+                <p>Bạn có thể liên hệ với chúng tôi thông qua các mạng xã hội.</p>
             </div>
             <ul class="footer-container__contact-social">
-                <li>
-                    <a href="https://daa.uit.edu.vn/"><img class="contact-social__logo" src="/imgs/brands/fb_logo.webp" alt="Logo Facebook" /></a>
-                </li>
-                <li>
-                    <a href="https://daa.uit.edu.vn/"><img class="contact-social__logo" src="/imgs/brands/insta_logo.png" alt="Logo Instagram" /></a>
-                </li>
-                <li>
-                    <a href="https://daa.uit.edu.vn/"><img class="contact-social__logo" src="/imgs/brands/youtube_logo.png" alt="Logo Youtube" /></a>
-                </li>
+                <li><a href="https://daa.uit.edu.vn/"><img class="contact-social__logo" src="/imgs/brands/fb_logo.webp" alt="Logo Facebook"></a></li>
+                <li><a href="https://daa.uit.edu.vn/"><img class="contact-social__logo" src="/imgs/brands/insta_logo.png" alt="Logo Instagram"></a></li>
+                <li><a href="https://daa.uit.edu.vn/"><img class="contact-social__logo" src="/imgs/brands/youtube_logo.png" alt="Logo Youtube"></a></li>
             </ul>
         </div>
 
@@ -42,10 +31,7 @@
 
         <div class="footer-container__update col-lg-3">
             <h3>Cập nhật từ chúng tôi</h3>
-            <p>
-                Xác nhận thư điện tử của bạn để nhận được ngay những cập nhật mới nhất
-                từ chúng tôi hàng tuần
-            </p>
+            <p>Xác nhận thư điện tử của bạn để nhận được ngay những cập nhật mới nhất từ chúng tôi hàng tuần</p>
             <div class="footer-container__form">
                 <input type="email" name="email_input" id="email_input" class="form-control update__input-field" placeholder="Email của bạn" required />
                 <button class="btn--filled sec" type="submit">
@@ -55,6 +41,5 @@
                 </button>
             </div>
         </div>
-    </div>
     </div>
 </footer>
